fix: controller 出参 VO 化——实体出边界/手写转换清零（观察项 3 项 + 原观察①④）